// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Movie details component should have image 1`] = `
<article>
  <dl>
    <dd>
      Rating:
    </dd>
    <dt>
      6.4
       (
      4412
       votes)
    </dt>
    <dd>
      Genres:
    </dd>
    <dt>
      Family, Animation, Adventure, Comedy
    </dt>
    <dd>
      Release date:
    </dd>
    <dt>
      2015-06-17
    </dt>
  </dl>
  <img
    src="https://image.mock.api/big/q0R4crx2SehcEEQEkYObktdeFy.jpg"
  />
  <p>
    Minions Stuart, Kevin and Bob are recruited by Scarlet Overkill, a super-villain who, alongside her inventor husband Herb, hatches a plot to take over the world.
  </p>
</article>
`;

exports[`Movie details component shouldn't have image 1`] = `
<article>
  <dl>
    <dd>
      Rating:
    </dd>
    <dt>
      6.4
       (
      4412
       votes)
    </dt>
    <dd>
      Genres:
    </dd>
    <dt>
      Family, Animation, Adventure, Comedy
    </dt>
    <dd>
      Release date:
    </dd>
    <dt>
      2015-06-17
    </dt>
  </dl>
  
  <p>
    Minions Stuart, Kevin and Bob are recruited by Scarlet Overkill, a super-villain who, alongside her inventor husband Herb, hatches a plot to take over the world.
  </p>
</article>
`;
